@@ -1,3 +1,0 @@
-blib
-pm_to_blib
-Makefile
