@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Proc-Simple
-version:            1.25
+version:            1.26
 abstract:           ~
 author:  []
 license:            unknown
