@@ -1,5 +1,5 @@
 ######################################################################
-    Proc::Simple 1.25
+    Proc::Simple 1.26
 ######################################################################
 
 NAME
@@ -279,4 +279,6 @@ AUTHOR
         Chip Capelik contributed a patch with the wait() method.
 
         Jeff Holt provided a patch for time tracking with t0() and t1().
+
+        Brad Cavanagh fixed RT33440 (unreliable $?)
 
