@@ -117,7 +117,7 @@ require Exporter;
 
 @ISA     = qw(Exporter AutoLoader);
 @EXPORT  = qw( );
-$VERSION = '1.25';
+$VERSION = '1.26';
 
 ######################################################################
 # Globals: Debug and the mysterious waitpid nohang constant.
@@ -516,6 +516,10 @@ signal (SIGTERM if undefined).
 sub DESTROY {
     my $self = shift;
 
+    # Localize special variables so that the exit status from waitpid
+    # doesn't leak out, causing exit status to be incorrect.
+    local( $., $@, $!, $^E, $? );
+
     # Processes never started don't have to be cleaned up in
     # any special way.
     return unless $self->pid();
@@ -597,6 +601,10 @@ sub wait {
 # Reaps processes, uses the magic WNOHANG constant
 ######################################################################
 sub THE_REAPER {
+
+    # Localize special variables so that the exit status from waitpid
+    # doesn't leak out, causing exit status to be incorrect.
+    local( $., $@, $!, $^E, $? );
 
     my $child;
     my $now = time();
@@ -748,5 +756,7 @@ suggested the multi-arg start()-methods.
 Chip Capelik contributed a patch with the wait() method.
 
 Jeff Holt provided a patch for time tracking with t0() and t1().
+
+Brad Cavanagh fixed RT33440 (unreliable $?)
 
 =cut
