@@ -1,12 +1,0 @@
-#!/usr/bin/perl
-###########################################
-# release -- Release this module
-# Mike Schilli, 2002 (m@perlmeister.com)
-###########################################
-use warnings;
-use strict;
-
-    # Available at http://perlmeister.com/scripts
-use ModDevUtils;
-
-ModDevUtils::release() or exit 0;
