@@ -2,6 +2,12 @@
     Proc::Simple CHANGES
 ######################################################################
 
+          from 1.25: Localize special variables so that the exit status 
+                     from waitpid doesn't leak out, causing exit status 
+                     to be incorrect (RT33440, fixed by Brad Cavanagh).
+
+          from 1.24: Added copyright header
+
           from 1.23: Applied doc patch by Janne Chr. Schulz
 
           from 1.22: Applied patch by Jeff Holt, providing start
